--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "match8",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "build": "babel src --extensions '.mjs' -d lib",
+    "build": "babel src -d lib",
     "prepublish": "npm run test && npm run build",
-    "test": "mocha --compilers js:babel-core/register ./src/**/*.spec.mjs"
+    "test": "mocha --compilers js:babel-core/register ./src/**/*.spec.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,10 +21,9 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "prettier": "^1.12.1"
   },
   "dependencies": {
-    "prettier": "^1.12.1",
-    "ramda": "^0.25.0"
   }
 }
